--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Tilt+Prism&display=swap');
 body{
     background-color: brown;
     background-image: url('icecream1.jpg');
@@ -10,4 +11,10 @@ body{
     padding: 0;
     margin: 0;
     border: none;
+}
+h1{
+    font-family: 'Tilt Prism', cursive;
+}
+.sweet{
+    font-family: 'Dancing Script',cursive;
 }
