--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     z-index: -1;
+    background-attachment: scroll;
+    
+
+    
     
 }
 *{
@@ -12,21 +16,52 @@ body{
     margin: 0;
     border: none;
 }
+/* heading*/
 h1{
     font-family: 'Dancing Script',cursive;
     font-size: 200%;
     color: black;
     text-transform: uppercase;
+   
+    
     
     
 }
 .sweet{
     font-family: 'Dancing Script',cursive;
     font-size: 220%;
-    color: rgb(234, 24, 136);
+    color: rgb(79, 21, 79);
     text-transform: uppercase;
+    text-decoration: none;
+    
     
 }
+
 #logo{
     margin: 10px 30px;
+    
 }
+#logo a{
+    text-decoration: none;
+}
+/* navigation */
+
+#navbar li {
+    float: right;
+    list-style: none;
+    margin-left: 30px;
+    margin-right: 30px;
+    
+}
+#navbar a{
+    text-decoration: none;
+    color:rgb(218, 29, 29);
+    font-size: 40px;
+    font-family: 'Dancing Script',cursive;}
+
+    #navbar a:hover{
+        padding: 10px 15px 10px 15px;
+        color: white;
+        background-color:rgb(218, 29, 29);
+        border-radius: 100px;
+    }
